augur-cli/crates/augur-core/tests/compile_fail/cases/cf_004_task_runner_bypass_submit_execution_plan_absent.tests.rs
use augur_core::actors::orchestrator::ingestion::run_without_orchestrator_submit;
use augur_domain::domain::ExecutionPlan;

fn main() {
    let plan = ExecutionPlan::new(Vec::new(), None);
    let _ = run_without_orchestrator_submit(plan);
}
